<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="tidak_punya_akun">Dont Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_teacher">Register</string>

    <!-- HOME -->
    <string name="hello">Hello, Welcome !</string>
    <string name="user">Lennia</string>
    <string name="myprofile">My Profile</string>
    <string name="private_schedule">Make an Advertisement, Be Lesson Partner</string>
    <string name="category">Many Specialization, Go Find Your Teacher</string>
    <string name="teacher">Lesson Partner</string>
    <string name="see_all">See All</string>

    <!--    Advertisement -->
    <string name="advername"> Advertisement List</string>
    <string name="categorycourse">Choose Category Course</string>
    <string name="choosecategory">category course</string>
    <string name="next">Next</string>
    <string name="addcategory">+</string>
    <string name="beTeacher">Be a Lesson Partner</string>
    <string name="youradvertisement">Come and Join Us</string>
    <string name="tambahiklan"> Add Advertisement</string>
    <string name="iklansaya">My Advertisement</string>


    <string name="teacher_registration">Teacher Registration</string>
    <string name="submit_data">Submit Data</string>
    <string name="createadvertisement">Create Advertisement Course</string>
    <string name="juduladvertisement">Advertisement Title ?</string>
    <string name="judul_desc">Insert Title of the Advertisement</string>
    <string name="teaching_people_max">Course Type(Private/Group)</string>
    <string name="teaching_people_max_desc">If Group, Please write the maximum students</string>
    <string name="teaching_people_method">what teaching methods did you use?</string>
    <string name="teaching_people_method_desc">input teaching methods</string>
    <string name="describe_yourself">Make people know yourself better </string>
    <string name="describe_yourself_desc">describe yourself and the method you teach</string>
    <string name="location_and_pricing">Location &amp; Pricing</string>
    <string name="teaching_location">Location for Course</string>
    <string name="teaching_location_desc">Input Your City Location</string>
    <string name="pricing">how much is the hourly course ?</string>
    <string name="pricing_Desc">Input your price</string>
    <string name="term_and_condition">I agree to advertise myself to be lesson partner in accordance with the terms &amp; conditions</string>
    <string name="title_activity_second_advertisement">SecondAdvertisementActivity</string>
    <string name="title_activity_third_advertisement">ThirdAdvertisement</string>
    <string name="title_activity_final_advertisement">FinalAdvertisement</string>





    <string name="teaching_detail">Teaching Detail</string>
    <string name="teaching">what are you going to teach ?</string>
    <string name="teaching_desc">Insert Your specialist</string>

    <string name="title_activity_menunavigasi">menunavigasi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="profile">Profile</string>
    <string name="buat_iklan">Buat Iklan</string>
    <string name="pesanan_saya">Pesanan Saya</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>

</resources>
